# Glue

./: CMakeLists.txt  LICENSE
Examples/: expressions.glue  hello.glue  sticky.glue
src/: main.cpp
src/AST/: AST.cpp  ast.h
src/codegen/: codegen.cpp  codegen.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/semantic/: semantic.cpp  semantic.h
